# HRD

./: 3333  3333.c  DCL.sql  DDL.sql  README.md  built_in_function.sql  gethostbyname  gethostbyname.c  lefttime  select 1_sql.sql  select_group_by.sql  test  test.c  test1  test1.cpp  test1.py  www  www.c  데이터베이스 개론과 실습.hwp
c_src/: Solar2Lunar.c  arrayAssigment.c  arrayCompare  arrayCompare.c  baseball  baseball.c  bubbleSorting  bubbleSorting.c  celsius2Fahr  circle  circle.c  dice.c  dice2.c  factorial.c  fahr2Celsius  fahr2Celsius.c  fahr2Celsius2.c  fahr2Celsius3  fahr2Celsius3.c  fahr2Celsius4.c  findMaxInArray2.c  findValueInArray  findValueInArray.c  findValueInArray2  limits  literal  lotto  lotto.c  lotto2.c  poiner4.c  pointer2.c  pointer3  pointer3.c  pointer5  pointerAndArray  pointerAndArray.c  power  power.c  score  score.c  (+11 more)
cpp_src/: main  main.c
ds/: main.c
first/: hello  hello.c  myProfile  myProfile.c
log/: count_log.txt
matplotlib/: ma_pyplot.py  ma_subplot.py
matplotlib_src/: bar_graph.py  ma_scatter_plot.py  stacked_bar_graph.py
numpytest/: 4_1_1.py  boolenIndex.py  broadcasting_operations.py  concatenation_functions.py  dot_product.py  numpyadd.py  numpyarray.py  numpyarrayoperation.py  numpyindexing.py  numpymethod.py
opencv/chap02/: 01_helloworld.cpp  CMakeLists.txt
opencv/chap03/: CMakeLists.txt  MatOp.cpp  MatOp2.cpp  MatOp3.cpp  MatOp5.cpp  Rect.cpp  VecOP.cpp  basic.cpp  materx.cpp
pandas/: DataFrameClass.py  SeriesClass.py  excellRead.py  merge_and_connt.py
pandas_src/: grouped.py  ipl_gropby.py
python/: celsius.py  (+12 more)
(+356 files in other folders)
